Nav_Side_Bar Modification

--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -4,7 +4,7 @@
 			<!-- Logo Header -->
 			<div class="logo-header" data-background-color="dark2">
 				
-				<a href="index.html" class="logo">
+				<a href="DPRData.html" class="logo">
 					<img src="/static/assets/img/DPR_Log_No_BackGroup.png" width="60" height="60" alt="navbar brand" class="navbar-brand">
 					Project X
 				</a>
