--- a/app/templates/DPRData.html
+++ b/app/templates/DPRData.html
@@ -10,7 +10,7 @@
 	<div class="content">
 		<div class="page-inner">
 			<div class="page-header">
-				<h4 class="page-title">DataTables.Net</h4>
+				<h4 class="page-title">Data Tables</h4>
 				<ul class="breadcrumbs">
 					<li class="nav-home">
 						<a href="#">
