--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -63,17 +63,17 @@
 						<li class="nav-item {% if 'ui-' in segment %} active {% endif %}">
 							<a data-toggle="collapse" href="#base">
 								<i class="fas fa-layer-group"></i>
-								<p>Base</p>
+								<p>Data</p>
 								<span class="caret"></span>
 							</a>
 							<div class="collapse" id="base">
 								<ul class="nav nav-collapse">
-									<!-- <li>
-										<a href="/ui-avatars.html">
-											<span class="sub-item">Avatars</span>
+									<li>
+										<a href="/DPRData">
+											<span class="sub-item">Tables</span>
 										</a>
 									</li>
-									<li>
+									<!--<li>
 										<a href="/ui-buttons.html">
 											<span class="sub-item">Buttons</span>
 										</a>
